feat: implementando consultas para relatórios refactor: modificando descrições do swagger ui e retirando imports não utilizados fix: corrigindo respostas dos endpoints